motto had a contrast issue, changed from red to gray

--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -111,7 +111,7 @@ a {
     display: inline;
 }
 #name { margin: 0 auto;}
-#phrase { margin: 0 auto;}
+#phrase { margin: 0 auto; color: #bfc0c0;}
 #pageTitle {margin: 20px;}
 
 /* page title */
